--- a/templates/index.html
+++ b/templates/index.html
@@ -22,17 +22,15 @@
     {%endfor%}
     {%endif%}
     {%endwith%}
-    <section class="titulo"><img src="/static/img/Logo.png" alt=""><div class="titulo"><p>Withdrawal System</p></div></section>
+    <section class="titulo"><img src="/static/img/Logo.png" alt=""><h1>Withdrawal System</h1></section>
     <div class="container"> 
-        <form action="/validar_usuario" method="POST">
+        <form action="/inicio" method="POST">
             <p>¡Hola! Para seguir, ingresa tu  usuario</p>
             <label for="user"> Ingresa tu Usuario <i class="fas fa-user-tie"></i> </label>
-            <input autocomplete="off" type="text" name="user" id="user"  class="user_inicio" required>
-            <label for="clave"> Ingresa tu Clave <i class="fas fa-user-tie"></i> </label>
-            <input autocomplete="off" type="password" name="clave" id="user"  class="user_inicio" required>
+            <input type="text" name="user" id="user"  class="user_inicio" required>
             <input type="submit"  class="btn" value="Continuar">
         </form>
-    </div>
+    </div> 
 </body>
 </html>
 
